--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="header__inner">
         <div class="user">
           <div class="user__avatar">
-            <img src="https://via.placeholder.com/57/2B2A2C" alt="" class="user-img">
+            <img src="https://dummyimage.com/57/2B2A2C" alt="" class="user-img">
           </div>
           <div class="user__info">
             <div class="user__name">
@@ -94,7 +94,7 @@
       <div class="portfolio">
         <div class="portfolio__item" data-category="website">
           <div class="project" data-modal="#modal_project_1">
-            <img class="project__image" src="https://via.placeholder.com/370x300" alt="">
+            <img class="project__image" src="https://dummyimage.com/370x300" alt="">
             <div class="project__content">
               <div class="project__category">
                 Category: Website
@@ -110,7 +110,7 @@
         </div>
         <div class="portfolio__item" data-category="app">
           <div class="project" data-modal="#modal_project_2">
-            <img class="project__image" src="https://via.placeholder.com/370x300" alt="">
+            <img class="project__image" src="https://dummyimage.com/370x300" alt="">
             <div class="project__content">
               <div class="project__category">
                 Category: App
@@ -126,7 +126,7 @@
         </div>
         <div class="portfolio__item" data-category="interaction">
           <div class="project">
-            <img class="project__image" src="https://via.placeholder.com/370x300" alt="">
+            <img class="project__image" src="https://dummyimage.com/370x300" alt="">
             <div class="project__content">
               <div class="project__category">
                 Category: Interaction
@@ -142,7 +142,7 @@
         </div>
         <div class="portfolio__item" data-category="interaction">
           <div class="project">
-            <img class="project__image" src="https://via.placeholder.com/370x300" alt="">
+            <img class="project__image" src="https://dummyimage.com/370x300" alt="">
             <div class="project__content">
               <div class="project__category">
                 Category: Interaction
@@ -158,7 +158,7 @@
         </div>
         <div class="portfolio__item" data-category="website">
           <div class="project">
-            <img class="project__image" src="https://via.placeholder.com/370x300" alt="">
+            <img class="project__image" src="https://dummyimage.com/370x300" alt="">
             <div class="project__content">
               <div class="project__category">
                 Category: Website
@@ -174,7 +174,7 @@
         </div>
         <div class="portfolio__item" data-category="app">
           <div class="project">
-            <img class="project__image" src="https://via.placeholder.com/370x300" alt="">
+            <img class="project__image" src="https://dummyimage.com/370x300" alt="">
             <div class="project__content">
               <div class="project__category">
                 Category: App
@@ -231,7 +231,7 @@
           Quisque aliquet a ipsum nec tincidunt. Nulla vitae rhoncus leo. Praesent dui sapien, bibendum quis tempus dictum.
         </div>
         <div class="reviews__author">
-          <img src="https://via.placeholder.com/103/332F30" class="reviews__image img" alt="">
+          <img src="https://dummyimage.com/103/332F30" class="reviews__image img" alt="">
           <div class="reviews__name">
             Edward M. Brooks
           </div>
@@ -270,7 +270,7 @@
                 10 <br> June
               </div>
               <a href="">
-                <img src="https://via.placeholder.com/370x257" alt="" class="articles__image img">
+                <img src="https://dummyimage.com/370x257" alt="" class="articles__image img">
               </a>
             </div>
             <div class="articles__content">
@@ -297,7 +297,7 @@
                 15 <br> June
               </div>
               <a href="">
-                <img src="https://via.placeholder.com/370x257" alt="" class="articles__image img">
+                <img src="https://dummyimage.com/370x257" alt="" class="articles__image img">
               </a>
             </div>
             <div class="articles__content">
@@ -324,7 +324,7 @@
                 20 <br> June
               </div>
               <a href="">
-                <img src="https://via.placeholder.com/370x257" alt="" class="articles__image img">
+                <img src="https://dummyimage.com/370x257" alt="" class="articles__image img">
               </a>
             </div>
             <div class="articles__content">
@@ -403,10 +403,10 @@
         <div class="modal-work__preview">
           <div data-slider="slick">
             <div>
-              <img class="modal-work__photo" src="https://via.placeholder.com/790x780" alt="project-image">
+              <img class="modal-work__photo" src="https://dummyimage.com/790x780" alt="project-image">
             </div>
             <div>
-              <img class="modal-work__photo" src="https://via.placeholder.com/790x780/e6aec8" alt="project-image">
+              <img class="modal-work__photo" src="https://dummyimage.com/790x780/e6aec8" alt="project-image">
             </div>
           </div>
         </div>
@@ -463,10 +463,10 @@
         <div class="modal-work__preview">
           <div data-slider="slick">
             <div>
-              <img class="modal-work__photo" src="https://via.placeholder.com/790x780" alt="project-image">
+              <img class="modal-work__photo" src="https://dummyimage.com/790x780" alt="project-image">
             </div>
             <div>
-              <img class="modal-work__photo" src="https://via.placeholder.com/790x780/e6aec8" alt="project-image">
+              <img class="modal-work__photo" src="https://dummyimage.com/790x780/e6aec8" alt="project-image">
             </div>
           </div>
         </div>
